--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "vite",
     "build": "vite build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [
     "phaser",
@@ -17,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/coverage-v8": "^3.2.2",
     "jsdom": "^26.1.0",
     "phaser": "^3.80.1",
     "simplex-noise": "^4.0.1",
